tests/parser/twrongcmdsyntax.nim
discard """
  errormsg: '''in expression '4 2': identifier expected, but found '4'''
  line: 6
"""

echo 4 +2
